# nogazaki

./: README.md
AoC/2022/03 - Rucksack Reorganization/: main.lua
AoC/2022/12 - Hill Climbing Algorithm/: main.lua
AoC/2022/14 - Regolith Reservoir/: main.lua
AoC/2022/21 - Monkey Math/: main.lua
aoc/2022/: .stylua.toml  main.lua  solver.lua  utils.lua
aoc/2022/01 - Calorie Counting/: main.lua
aoc/2022/01_calorie_counting/: init.lua
aoc/2022/02 - Rock Paper Scissors/: main.lua
aoc/2022/02_rock_paper_scissors/: init.lua
aoc/2022/03_rucksack_reorganization/: init.lua
aoc/2022/04 - Camp Cleanup/: main.lua
aoc/2022/04_camp_cleanup/: init.lua
aoc/2022/05_supply_stacks/: init.lua  main.lua
aoc/2022/06 - Tuning Trouble/: main.lua
aoc/2022/06_tuning_trouble/: init.lua
aoc/2022/07_no_space_left_on_device/: init.lua  main.lua
aoc/2022/08 - Treetop Tree House/: main.lua
aoc/2022/08_treetop_tree_house/: init.lua
aoc/2023/: Cargo.toml
aoc/2023/01_trebuchet/: main.rs
aoc/2023/02_cube_conundrum/: main.rs
aoc/2023/03 - Gear Ratios/: main.rs
aoc/2023/04 - Scratchcards/: main.rs
aoc/2023/05_you_give_a_seed_a_fertilizer/: main.rs
aoc/2023/06_wait_for_it/: main.rs
aoc/2023/07 - Camel Cards/: main.rs
aoc/2023/08 - Haunted Wasteland/: main.rs
aoc/2023/09_mirage_maintenance/: main.rs
aoc/2023/11_cosmic_expansion/: main.rs
aoc/2023/13_point_of_incidence/: main.rs
university/: .clang-format
university/8051_ds1307_clock/: main.c  main.h  port.h  pushButton.c  pushButton.h
university/motor_controller/: main.c  serial_tx.py
(+62 files in other folders)
