[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day01"
path = "01 - Trebuchet/main.rs"
[[bin]]
name = "day02"
path = "02 - Cube Conundrum/main.rs"
[[bin]]
name = "day03"
path = "03 - Gear Ratios/main.rs"
[[bin]]
name = "day04"
path = "04 - Scratchcards/main.rs"
[[bin]]
name = "day05"
path = "05 - You Give A Seed A Fertilizer/main.rs"
[[bin]]
name = "day06"
path = "06 - Wait For It/main.rs"
[[bin]]
name = "day07"
path = "07 - Camel Cards/main.rs"

[dependencies]
regex = { version = "1.11.1" }
